b46: Add static .page width to avoid max-width container overflows

--- a/templates/b46/style.css
+++ b/templates/b46/style.css
@@ -525,6 +525,10 @@ main.col-xs-12.col-lg-12 .save_updertH hr {
 .bi.bi-grip-horizontal {
   display: none; }
 
+/* static pages */
+.page {
+    width: 100%; }
+
 /* sidebars start */
 @media only screen and (min-width: 480px) {
   /* flexing the bottom sidebar item */
